--- a/css/styles.css
+++ b/css/styles.css
@@ -247,7 +247,9 @@ section {
 /* For mobile devices */
 @media (max-width: 768px) {
     #header .container {
-        min-height: 200px;
+        background: url(../images/header-back2.png) repeat 0 0;
+
+		min-height: 300px;
         background-attachment: scroll;/* make sure the image scales well */
     }
 }
