--- a/css/styles.css
+++ b/css/styles.css
@@ -247,12 +247,13 @@ section {
 /* For mobile devices */
 @media (max-width: 768px) {
     #header .container {
-        background: url(../images/header-back2.png) repeat 0 0;
-
-		min-height: 300px;
-        background-attachment: scroll;/* make sure the image scales well */
+        background: url(../images/header-back2.png) no-repeat center center;
+        background-size: cover;   /* makes it fill full width */
+        width: 100%;
+        background-attachment: scroll; /* works better on mobile */
     }
 }
+
 
 @media (max-width: 480px) {
     #header .container {
