--- a/css/styles.css
+++ b/css/styles.css
@@ -247,8 +247,8 @@ section {
 /* For mobile devices */
 @media (max-width: 768px) {
     #header .container {
-        background: url(../images/header-back2.png) no-repeat center center;
-        background-size: cover;   /* makes it fill full width */
+        background: url(../images/bsbild_fullhd_01.jpg) no-repeat center center;
+        /* background-size: cover;   makes it fill full width */
         width: 100%;
         background-attachment: scroll; /* works better on mobile */
     }
